--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
     "typeRoots": ["node_modules/@types"],
     "alwaysStrict": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["src/**/*.test.ts"]
+  "include": ["src/**/*", "tests/**/*"],
+  "exclude": ["unit_tests/**/*"]
 }
