--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "npm": "8.x"
   },
   "dependencies": {
-    "axios": "0.21.1",
+    "axios": "^0.21.4",
     "form-data": "2.3.3",
     "json-stringify-safe": "5.0.1",
     "tslog": "3.2.2",
@@ -39,8 +39,10 @@
     "@types/jest": "26.0.23",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "axios-mock-adapter": "^1.20.0",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "jest": "26.6.3",
-    "jest-junit": "12.2.0",
+    "jest-junit": "^13.0.0",
     "prettier": "2.3.2",
     "process": "0.11.10",
     "ts-jest": "26.5.6",
