--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jest-api-test-typescript-example",
   "version": "1.0.0",
-  "description": "An example repository which provides the necessary boilerplate for a reusable and maintainable jest test framework",
+  "description": "An example project which provides the necessary boilerplate for a reusable and maintainable jest test framework",
   "main": "dist/index.js",
   "directories": {
     "test": "test"
@@ -41,11 +41,12 @@
     "axios-mock-adapter": "^1.20.0",
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "jest": "26.6.3",
+    "jest": "^26.6.3",
     "jest-junit": "^13.0.0",
     "prettier": "2.3.2",
     "process": "0.11.10",
     "ts-jest": "26.5.6",
-    "typescript": "4.2.4"
+    "typescript": "4.2.4",
+    "uuidv4": "^6.2.12"
   }
 }
