--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "scripts": {
     "test": "jest --forceExit --detectOpenHandles --passWithNoTests",
-    "test-ci": "npm run build && npm run test -- --ci --coverage",
+    "unit:test": "npm run test unit_test -- --coverage",
+    "unit:test:ci" : "npm test unit_test -- --ci --coverage && npm run build",
+    "functional:test": "npm run test functional_test --forceExit --detectOpenHandles --passWithNoTests",
     "build": "tsc",
     "lint": "eslint --ext .js,.ts,.tsx .",
     "lint:fix": "npm run lint -- --fix",
