--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,5 +1,5 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["src/**/*", "test/**/*", "*.ts"],
+  "include": ["src/**/*", "functional_test/**/*", "unit_test/**/*", "*.ts"],
   "exclude": ["node_modules", "dist"]
 }
