--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,6 @@
     "typeRoots": ["node_modules/@types"],
     "alwaysStrict": true
   },
-  "include": ["src/**/*", "tests/**/*"],
-  "exclude": ["unit_tests/**/*"]
+  "include": ["src/**/*", "functional_test/**/*"],
+  "exclude": ["unit_test/**/*"]
 }
